FIX: Mejorados comentarios javadoc y pydoc